Отсортировать департаменты [#34352]