@@ -1,10 +1,13 @@
 package ru.job4j.sort;
 
+import com.sun.source.tree.Tree;
 import org.junit.Test;
 import ru.job4j.sort.ListCompare;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
+import java.util.TreeSet;
 
 import static org.hamcrest.core.Is.is;
 import static org.hamcrest.Matchers.greaterThan;
@@ -16,7 +19,7 @@ public class DepartmentSortTest {
     @Test
     public void whenAscSortThenSuccess() {
         DepartmentSort dep = new DepartmentSort();
-        dep.setDepartments(Arrays.asList("K1",
+        dep.setDepartments(new TreeSet<>(Arrays.asList("K1",
                 "K1\\SK1\\SSK2",
                 "K2\\SK1",
                 "K1\\SK1",
@@ -24,9 +27,9 @@ public class DepartmentSortTest {
                 "K1\\SK2",
                 "K1\\SK1\\SSK1",
                 "K2",
-                "K2\\SK1\\SSK2"));
+                "K2\\SK1\\SSK2")));
         dep.ascSort();
-        assertThat(dep.getDepartments(), is(new ArrayList<String>(Arrays.asList("K1",
+        assertThat(new ArrayList<>(dep.getDepartments()), is(Arrays.asList("K1",
                 "K1\\SK1",
                 "K1\\SK1\\SSK1",
                 "K1\\SK1\\SSK2",
@@ -34,13 +37,13 @@ public class DepartmentSortTest {
                 "K2",
                 "K2\\SK1",
                 "K2\\SK1\\SSK1",
-                "K2\\SK1\\SSK2"))));
+                "K2\\SK1\\SSK2")));
     }
 
     @Test
     public void whenDescSortThenSuccess() {
         DepartmentSort dep = new DepartmentSort();
-        dep.setDepartments(Arrays.asList("K1",
+        dep.setDepartments(new TreeSet<>(List.of("K1",
                 "K1\\SK1\\SSK2",
                 "K2\\SK1",
                 "K1\\SK1",
@@ -48,9 +51,9 @@ public class DepartmentSortTest {
                 "K1\\SK2",
                 "K1\\SK1\\SSK1",
                 "K2",
-                "K2\\SK1\\SSK2"));
+                "K2\\SK1\\SSK2")));
         dep.descSort();
-        assertThat(dep.getDepartments(), is(new ArrayList<String>(Arrays.asList("K2",
+        assertThat(new ArrayList<>(dep.getDepartments()), is(Arrays.asList("K2",
                 "K2\\SK1",
                 "K2\\SK1\\SSK1",
                 "K2\\SK1\\SSK2",
@@ -58,21 +61,21 @@ public class DepartmentSortTest {
                 "K1\\SK1",
                 "K1\\SK1\\SSK1",
                 "K1\\SK1\\SSK2",
-                "K1\\SK2"))));
+                "K1\\SK2")));
     }
 
     @Test
     public void whenAscSortWithNoSoloDepsThenSuccess() {
         DepartmentSort dep = new DepartmentSort();
-        dep.setDepartments(Arrays.asList("K1\\SK1\\SSK2",
+        dep.setDepartments(new TreeSet<>(Arrays.asList("K1\\SK1\\SSK2",
                 "K2\\SK1",
                 "K1\\SK1",
                 "K2\\SK1\\SSK1",
                 "K1\\SK2",
                 "K1\\SK1\\SSK1",
-                "K2\\SK1\\SSK2"));
+                "K2\\SK1\\SSK2")));
         dep.ascSort();
-        assertThat(dep.getDepartments(), is(new ArrayList<String>(Arrays.asList("K1",
+        assertThat(new ArrayList<>(dep.getDepartments()), is(Arrays.asList("K1",
                 "K1\\SK1",
                 "K1\\SK1\\SSK1",
                 "K1\\SK1\\SSK2",
@@ -80,6 +83,6 @@ public class DepartmentSortTest {
                 "K2",
                 "K2\\SK1",
                 "K2\\SK1\\SSK1",
-                "K2\\SK1\\SSK2"))));
+                "K2\\SK1\\SSK2")));
     }
 }
